--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -8,6 +8,8 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web --port 4216",
+    "web:dev": "CI=true expo start --web --port 4216",
+    "web:clear": "CI= expo start --web --port 4216 --clear",
     "lint": "expo lint"
   },
   "dependencies": {
@@ -22,6 +24,7 @@
     "expo-font": "~14.0.10",
     "expo-haptics": "~15.0.8",
     "expo-image": "~3.0.11",
+    "expo-linear-gradient": "~15.0.8",
     "expo-linking": "~8.0.11",
     "expo-localization": "^17.0.8",
     "expo-router": "~6.0.21",
@@ -47,7 +50,9 @@
     "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.14",
     "@types/react": "~19.1.0",
+    "babel-plugin-module-resolver": "^5.0.2",
     "eslint": "^9.25.0",
     "eslint-config-expo": "~10.0.0",
     "typescript": "~5.9.2"
